public/css/chat.css
/* CSS Document */
ul#online {
	font-size:17px;
}

.badge {
	float: right;
}

#chat {
	width:100%;
	height:350px;
	overflow-y:auto;
	overflow-x:hidden;
	border:2px solid #08C;
	        border-radius: 5px;
	   -moz-border-radius: 5px;
	-webkit-border-radius: 5px;
}

.chat-header {
	margin-bottom:45px;
}

.actions {
	float:right;
}

.chat-title {
	float:left;
}

.actions .action {
	margin:12px;	
}

#lines p:nth-child(even) {
  background: #fafafa;
}

#lines p {
	margin:0px;
	padding:0px 10px;
    font-size:16px;
}

#login {
	display: inline-block;
	height:27px;
	width:105px;
	background:url('../img/fb-connect-small.png');
	vertical-align:top;
    margin-left:10px;
}

.system-message {
	font-style:italic;
}

.avatar-msg {
	        border-radius:5px;
	   -moz-border-radius:5px;
	-webkit-border-radius:5px;
	margin-right:5px;
	margin-top:4px;
	vertical-align:top;
}

p.message a.from {
	color:black;
	font-weight:bold;
}

p.message a.from:hover {
	text-decoration:none;
	color:dimgrey;
	font-weight:bold;
}

.label {
	display:inline-block;
	margin-left:5px;
	margin-right:2px;
	margin-top:5px;
	vertical-align:top !important;
}

p.message {
	position: relative;
}

.timestamp {
	display: inline-block;
	float:right;
	color: dimgrey;
	font-size: 10px;
}

.chat-title .title-text {
	display: inline;
	vertical-align: baseline;
	margin-right: 10px;
}

h3.title-text {
	color: dimgrey;
}

#fb-link {
	vertical-align:super;
	margin-right:8px;
}

.header-text {
	margin-left:5px;
}

